--- a/bloks/element/__like/element__like.css
+++ b/bloks/element/__like/element__like.css
@@ -1,5 +1,5 @@
 .element__like {
-    background-image: url(../images/like.svg);
+    background-image: url(../../../images/like.svg);
     background-size: cover;
     margin: 6px 7px 0 0;
     min-width: 20px;
