fix: Исправить блок modal

--- a/bloks/modal/__button-save/modal__button-save.css
+++ b/bloks/modal/__button-save/modal__button-save.css
@@ -1,5 +1,6 @@
 .modal__button-save {
     margin-top: 48px;
+    border: none;
     padding: 13px 0 18px;
     background: #000000;
     border-radius: 2px;
