--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,10 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
-@import url(../bloks/page/page.css);
-@import url(../bloks/header/header.css);
-@import url(../bloks/profile/profile.css);
-@import url(../bloks/elements/elements.css);
-@import url(../bloks/element/element.css);
-@import url(../bloks/footer/footer.css);
-@import url(../bloks/modal/modal.css);
-@import url(../bloks/modal/_open/modal_open.css);
-@import url(../bloks/form/form.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/element/element.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/modal/modal.css);
+@import url(../blocks/modal/_open/modal_open.css);
