--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     justify-self: center;
-    max-width: 282px;
+    width: 282px;
     background: #FFFFFF;
     border-radius: 10px;
 }
