feat: Добавить кнопку удаления карточки

--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,3 +1,4 @@
+@import url(./__delete/element__delete.css);
 @import url(./__img/element__img.css);
 @import url(./__group/element__group.css);
 @import url(./__title/element__title.css);
