--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-self: center;
+    position: relative;
     width: 282px;
     background: #FFFFFF;
     border-radius: 10px;
