--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -19,4 +19,8 @@
     display: none;
     justify-content: center;
     align-items: center;
+   
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility .5s, opacity .5s linear;
 }
