--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -16,10 +16,9 @@
     background: rgba(0, 0, 0, 0.5);
     height: 100%;
     width: 100%;
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
-   
     opacity: 0;
     visibility: hidden;
     transition: visibility .5s, opacity .5s linear;
