--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -6,6 +6,11 @@
     margin: 0 0 40px;
 }
 
+@media screen and (max-width: 900px) {
+    .header__logo {
+        margin-left: 28px;
+    }
+}
 @media screen and (max-width: 320px) {
     .header__logo {
         width: 103px;
