--- a/pages/index.css
+++ b/pages/index.css
@@ -8,4 +8,27 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/modal/modal.css);
 @import url(../blocks/modal/_open/modal_open.css);
-@import url(../blocks/element/__like/_active/element__like_active.css)
+@import url(../blocks/element/__like/_active/element__like_active.css);
+
+
+
+.modal__button-save_disabled {
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    border-radius: 2px;
+    background: #FFFFFF;
+    color: #000000;
+}
+
+.modal__input_type_error {
+    border-bottom: 1px solid #FF0000;
+}
+
+.modal__error_visible {
+    font-family: 'Inter', ‘Arial’, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    color: #FF0000;
+}
