feat: Доделать валидацию кнопки, Доделать закрытие модалок по нажатию esc и клику на оверлей

--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -8,6 +8,7 @@
 @import url(./__image-open/modal__image-open.css);
 @import url(./__container-image/modal__container-image.css);
 @import url(./__title-open/modal__title-open.css);
+@import url(./__error/modal__error.css);
 
 .modal {
     position: fixed;
