--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -14,6 +14,10 @@
     cursor: pointer;
 }
 
+.profile__add-button:focus {
+    outline: none;
+  }
+
 @media screen and (max-width: 680px) {
     .profile__add-button {
         width: 282px;
