--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -14,6 +14,10 @@
     cursor: pointer;
 }
 
+.profile__edit-button:focus {
+    outline: none;
+  }
+
 @media screen and (max-width: 680px) {
     .profile__edit-button {
         width: 18px;
