--- a/src/blocks/element/element.css
+++ b/src/blocks/element/element.css
@@ -3,6 +3,7 @@
 @import url(./__group/element__group.css);
 @import url(./__title/element__title.css);
 @import url(./__like/element__like.css);
+@import url(./__like/_title/element__like_title.css);
 
 .element {
     display: flex;
