--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -8,6 +8,8 @@
 @import url(../profile/__subtitle/profile__subtitle.css);
 @import url(../profile/__add-button/profile__add-button.css);
 @import url(../profile/__add-img/profile__add-img.css);
+@import url(../profile/__edit-avatar/profile__edit-avatar.css);
+@import url(../profile/__overlay/profile__overlay.css);
 
 .profile {
     display: flex;
