feat: Добавленны лайки карточкам, возможность удаления карточек, удалены лишние коментарии

--- a/src/blocks/modal/__title/modal__title.css
+++ b/src/blocks/modal/__title/modal__title.css
@@ -1,5 +1,5 @@
 .modal__title {
-    margin: 0 0 54px;
+    margin: 0;
     font-family: 'Inter', ‘Arial’, sans-serif;
     font-style: normal;
     font-weight: 900;
